shopping-app/deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: shop-app-dep
  namespace: shop-app-ns
  labels:
    app: shop-app-lb

spec:
  replicas: 2
  selector:
    matchLabels:
      app: shop-app-lb
  template:
    metadata:
      labels:
        app: shop-app-lb
    spec:
      containers:
      - name: shop-app-cont
        image: gulshanit/shop-app:latest
        ports:
        - containerPort: 80
