shopping-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shop-app-ingress
  namespace: shop-app-ns

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: shop-app-svc
            port:
              number: 80
